<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/calculadora_tv_pantalla"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight=".25"
        android:background="#dddddd"
        android:gravity="end|center"
        android:lines="1"
        android:maxLength="12"
        android:padding="20dp"
        android:text="@string/calculadora_btn_0"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25" >

        <Button
            android:id="@+id/calculadora_btn_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight=".25"
            android:text="@string/calculadora_btn_7" />

        <Button
            android:id="@+id/calculadora_btn_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_weight=".25"
            android:paddingBottom="2dp"
            android:paddingEnd="2dp"
            android:paddingStart="0dp"
            android:text="@string/calculadora_btn_8" />

        <Button
            android:id="@+id/calculadora_btn_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_weight=".25"
            android:paddingBottom="2dp"
            android:paddingEnd="2dp"
            android:paddingStart="0dp"
            android:text="@string/calculadora_btn_9" />

        <Button
            android:id="@+id/calculadora_btn_entre"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_weight=".25"
            android:paddingBottom="2dp"
            android:paddingEnd="2dp"
            android:paddingStart="0dp"
            android:text="@string/calculadora_btn_entre" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25" >

        <Button
            android:id="@+id/calculadora_btn_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight=".25"
            android:text="@string/calculadora_btn_4" />

        <Button
            android:id="@+id/calculadora_btn_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight=".25"
            android:text="@string/calculadora_btn_5" />

        <Button
            android:id="@+id/calculadora_btn_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight=".25"
            android:text="@string/calculadora_btn_6" />

        <Button
            android:id="@+id/calculadora_btn_por"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight=".25"
            android:text="@string/calculadora_btn_por" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25" >

        <Button
            android:id="@+id/calculadora_btn_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight=".25"
            android:text="@string/calculadora_btn_1" />

        <Button
            android:id="@+id/calculadora_btn_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight=".25"
            android:text="@string/calculadora_btn_2" />

        <Button
            android:id="@+id/calculadora_btn_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight=".25"
            android:text="@string/calculadora_btn_3" />

        <Button
            android:id="@+id/calculadora_btn_menos"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight=".25"
            android:text="@string/calculadora_btn_menos" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25" >

        <Button
            android:id="@+id/calculadora_btn_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight=".25"
            android:text="@string/calculadora_btn_0" />

        <Button
            android:id="@+id/calculadora_btn_igual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight=".25"
            android:text="@string/calculadora_btn_igual" />

        <Button
            android:id="@+id/calculadora_btn_borrar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight=".25"
            android:text="@string/calculadora_btn_borrar" />

        <Button
            android:id="@+id/calculadora_btn_mas"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight=".25"
            android:text="@string/calculadora_btn_mas" />
    </LinearLayout>

</LinearLayout>